// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserLinks /> <MobileNavMenu /> Should render and match the snapshot 1`] = `
<WithStyles(ForwardRef(Menu))
  anchorEl={Object {}}
  anchorOrigin={
    Object {
      "horizontal": "center",
      "vertical": "bottom",
    }
  }
  classes={
    Object {
      "paper": undefined,
    }
  }
  disableAutoFocusItem={true}
  elevation={0}
  getContentAnchorEl={null}
  id="mobileNav"
  onClose={[MockFunction]}
  open={true}
  transformOrigin={
    Object {
      "horizontal": "center",
      "vertical": "top",
    }
  }
>
  <WithStyles(ForwardRef(MenuItem))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    exact={true}
    to="/"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <HomeOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.home"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/campaigns"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <WbIncandescentOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.innovate"
    />
  </WrappedComponent>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/news"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <QuestionAnswerOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.news"
    />
  </WrappedComponent>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/events"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <EventOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.events"
    />
  </WrappedComponent>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/groups"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <GroupOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.groups"
    />
  </WrappedComponent>
  <WithStyles(ForwardRef(MenuItem))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/downloads"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <CloudDownloadOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.downloads"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/mentorship/:user_id"
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <GroupWorkOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.mentorship"
    />
  </WrappedComponent>
</WithStyles(ForwardRef(Menu))>
`;

exports[`<UserLinks /> <NavMenu /> Should render and match the snapshot 1`] = `
<WithStyles(ForwardRef(Toolbar))>
  <WithStyles(ForwardRef(Button))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    exact={true}
    to="/"
  >
    <Hidden
      smDown={true}
    >
      <HomeOutlinedIcon />
    </Hidden>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.home"
    />
  </WithStyles(ForwardRef(Button))>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/campaigns"
  >
    <Hidden
      smDown={true}
    >
      <WbIncandescentOutlinedIcon />
    </Hidden>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.innovate"
    />
  </WrappedComponent>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/news"
  >
    <Hidden
      smDown={true}
    >
      <QuestionAnswerOutlinedIcon />
    </Hidden>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.news"
    />
  </WrappedComponent>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/events"
  >
    <Hidden
      smDown={true}
    >
      <EventOutlinedIcon />
    </Hidden>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.events"
    />
  </WrappedComponent>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/groups"
  >
    <Hidden
      smDown={true}
    >
      <GroupOutlinedIcon />
    </Hidden>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.groups"
    />
  </WrappedComponent>
  <WithStyles(ForwardRef(Button))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/downloads"
  >
    <Hidden
      smDown={true}
    >
      <CloudDownloadOutlinedIcon />
    </Hidden>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.downloads"
    />
  </WithStyles(ForwardRef(Button))>
  <WrappedComponent
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    to="/mentorship/:user_id"
  >
    <Hidden
      smDown={true}
    >
      <GroupWorkOutlinedIcon />
    </Hidden>
    <Memo(Connect(DiverstFormattedMessage))
      id="diverst.containers.Routes.user.mentorship"
    />
  </WrappedComponent>
</WithStyles(ForwardRef(Toolbar))>
`;

exports[`<UserLinks /> Should render and match the snapshot 1`] = `
<Fragment>
  <Hidden
    smUp={true}
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(Button))
        aria-haspopup="true"
        onClick={[Function]}
      >
        <ArrowDropDownIcon
          className=""
        />
        <Memo(Connect(DiverstFormattedMessage))
          id="diverst.containers.Routes.user.home"
        />
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Toolbar))>
    <MobileNavMenu
      classes={Object {}}
      handleMobileNavClose={[Function]}
      isMobileNavOpen={false}
      mobileNavAnchor={null}
    />
  </Hidden>
  <Hidden
    xsDown={true}
  >
    <NavLinks
      classes={Object {}}
    />
  </Hidden>
</Fragment>
`;
